// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorPage /> renders correctly 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row mt-4"
  >
    <div
      className="col"
    >
      <h1
        className={null}
      >
        Error
      </h1>
      <div
        className="alert fade alert-danger show"
        hidden={false}
        role="alert"
      >
        <div
          className="alert-dialog"
        >
          <div
            className=""
          >
            <div
              className="message"
            >
              Something went terribly wrong
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ErrorPage /> renders correctly for 403 errors 1`] = `
<div
  className="container-fluid"
>
  <div
    className="container-fluid mt-3"
  >
    <div
      className="text-center py-5"
    >
      <h1
        className={null}
      >
        403
      </h1>
      <p
        className="lead"
      >
        You do not have access to this page.
      </p>
      <p>
        For assistance, please contact edX Enterprise Support at 
        <a
          href="mailto:customersuccess@edx.org"
          onClick={null}
          target="_self"
        >
           customersuccess@edx.org
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;

exports[`<ErrorPage /> renders correctly for 404 errors 1`] = `
<div
  className="container-fluid"
>
  <div
    className="container-fluid mt-3"
  >
    <div
      className="text-center py-5"
    >
      <h1
        className={null}
      >
        404
      </h1>
      <p
        className="lead"
      >
        Oops, sorry we can't find that page!
      </p>
      <p>
        Either something went wrong or the page doesn't exist anymore.
      </p>
    </div>
  </div>
</div>
`;
